# OSVR-ANTVR

./: AntvrHeadsetTracker.h  CMakeLists.txt  README.md  Release  com_osvr_ANTVR.cpp  com_osvr_ANTVR.json
OSVR-ANTVR-Project/ANTVR-Corproration/ANTVRSDK/: ANTVRDriver.h  ANTVRHidApi.lib  ANTVRSDK.h
cmake/: FindAntvr.cmake
device-descriptors/: ANTVR_Headset_1.json
displays/: ANTVR_KIT1.json
sample-configs/: osvr_server_config.antvr.sample.json  renderManager.antvr.json
